argo/deployments/canary/canary-rollout-svc.yaml
# nginx-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-stable-svc
  namespace: argo-rollouts
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-canary-svc
  namespace: argo-rollouts
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
