argo/deployments/canary/canary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-canary
  namespace: argo-demo
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: rollouts-demo
